Fixed line-height and spacing in header.

--- a/components/Header.module.scss
+++ b/components/Header.module.scss
@@ -7,11 +7,13 @@
 
 .HeaderTitle {
   font-size: 2.75em;
-  line-height: 1;
+  line-height: 1.1;
 }
 
 .HeaderSubtitle {
+  margin-top: 0.5rem;
   font-size: 1.25em;
+  line-height: 1.3;
   font-style: italic;
   opacity: 0.5;
 }
